--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -9,7 +9,7 @@
         <footer>
 
         <script type="text/javascript"
-                src="webjars/bootstrap/js/bootstrap.min.js"></script>
+                src="webjars/bootstrap/5.3.2/js/bootstrap.min.js"></script>
 
         </footer>
     </div>
