fix k8s_env copy past bug

--- a/src/main/resources/templates/k8s_env.html
+++ b/src/main/resources/templates/k8s_env.html
@@ -22,7 +22,7 @@
             </thead>
             <tbody>
             <tr th:each="instance : ${env}">
-                <td th:text="${instance.getKey()}">val</td>
+                <td th:text="${instance.getKey()}">key</td>
                 <td th:text="${instance.getValue()}">val</td>
             </tr>
             </tbody>
