Add webjars-locator-lite dependency and configure LiteWebJarsResourceResolver to provide version agnostic URLs that is native image compatible
- Introduced `webjars-locator-lite` dependency in `pom.xml` for better handling of webjars resources.
- Updated `WebConfig` to utilize `LiteWebJarsResourceResolver` for resolving webjars resources.
- Fixed resource paths in footer and header templates to align with webjars structure.
- Cleaned up `NativeReflectionRuntimeHintConfig` and adjusted hint registrations for template rendering.

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,4 +1,4 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
 </head>
 <body>
@@ -9,7 +9,7 @@
         <footer>
 
         <script type="text/javascript"
-                src="webjars/bootstrap/5.3.5/js/bootstrap.min.js"></script>
+                src="webjars/bootstrap/js/bootstrap.min.js"></script>
 
         </footer>
     </div>
